--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -32,17 +32,72 @@
             <div class="panel panel-default">
               <div class="panel-heading">Filter Search</div>
               <div class="panel-body">
-                <form id="form">
+                <form id="formDate">
                   <div class="form-group">
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
                         <label for="date">Enter a Date</label>
                         <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
                       </li>
+
+                      <!-- <li class="filter list-group-item">
+                        <label for="city">Enter a City</label>
+                        <input class="form-control" id="city" type="text" placeholder="grants pass">
+                      </li> -->
+                    </ul>
+                  </div>
+                  <!-- <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button> -->
+                </form>
+
+                <form id="formCity">
+                  <div class="form-group">
+                    <ul class="list-group" id="filters">
+                      <li class="filter list-group-item">
+                        <label for="date">Enter a City</label>
+                        <input class="form-control" id="city" type="text" placeholder="grants pass">
+                      </li>
+                    </ul>
+                  </div>
+                  <!-- <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button> -->
+                </form>
+
+                <form id="formState">
+                  <div class="form-group">
+                    <ul class="list-group" id="filters">
+                      <li class="filter list-group-item">
+                        <label for="date">Enter a State</label>
+                        <input class="form-control" id="state" type="text" placeholder="or">
+                      </li>
+                    </ul>
+                  </div>
+                  <!-- <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button> -->
+                </form>
+
+                <form id="formCountry">
+                  <div class="form-group">
+                    <ul class="list-group" id="filters">
+                      <li class="filter list-group-item">
+                        <label for="date">Enter a Country</label>
+                        <input class="form-control" id="country" type="text" placeholder="us">
+                      </li>
+                    </ul>
+                  </div>
+                  <!-- <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button> -->
+                </form>
+
+                <form id="formShape">
+                  <div class="form-group">
+                    <ul class="list-group" id="filters">
+                      <li class="filter list-group-item">
+                        <label for="date">Enter a Shape</label>
+                        <input class="form-control" id="shape" type="text" placeholder="triangle">
+                      </li>
                     </ul>
                   </div>
                   <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
                 </form>
+
+
               </div>
             </div>
           </aside>
